# fec-raptorq

./: HARDWARE_ACCELERATION.md  WASM_SIMD_COMPLETE.md  WASM_SIMD_SUMMARY.txt  package-lock.json  package.json
c-bindings/: .gitignore  Cargo.toml  Makefile  cbindgen.toml
c-bindings/benches/: interleaved_benchmark.rs
c-bindings/include/: raptorq.h  raptorq_interleaved.h
c-bindings/src/: interleave.rs  lib.rs
c-bindings/test/: test_raptorq.c
src/: Uint1Array.js  Uint1Array.test.js  get_binary_path.js  index.test.js
src/raptorq_raw/: decode.js  encode.js  exact_options.js  index.js  oti_decode.js  oti_encode.js
src/raptorq_suppa/: decode.js  encode.js  exact_strategy.js  index.d.ts  index.js  oti_decode.js  oti_encode.js  packet_header_decode.js  packet_header_encode.js  packet_miniheader_decode.js  packet_miniheader_encode.js
src/uoe/: api.js  as_async.js  base64_encode.js  bigint_ceil.js  bigint_pos_mod.js  bind_callable.js  bind_self.js  build_obj.js  build_obj_mut.js  cached_async_iterable.js  call_as_async.js  callable.js  callable_bound.js  collect_async.js  compare_bytes.js  create_async_factory.js  create_atomic_file.js  create_buffered_reader.js  create_context.js  create_coordinator.js  create_discarding_pub_sub.js  create_func_factory.js  create_interval.js  create_lock.js  create_machine.js  create_map_factory.js  create_module.js  create_multi_lock.js  create_promise.js  debug_xd.js  (+73 more)
wasm/: Cargo.toml  E2E_TEST_RESULTS.md  IMPLEMENTATION_COMPLETE.md  README-SIMD.md  build-simd.sh  raptorq-fec.js  test-e2e-browser.html  test-e2e.js  test-simd.html
wasm/.cargo/: config.toml
wasm/src/: lib.rs
(+11 files in other folders)
