[package]
name = "raptorq-c"
version = "0.1.0"
edition = "2021"
description = "C bindings for RaptorQ FEC encoding/decoding"

[lib]
name = "raptorq_c"
crate-type = ["staticlib", "cdylib"]

[dependencies]
raptorq = { path = "../internal/raptorq", default-features = false }

[profile.release]
opt-level = 3
lto = true
