[package]
name = "raptorq-c"
version = "0.1.0"
edition = "2021"
description = "C bindings for RaptorQ FEC encoding/decoding"

[lib]
name = "raptorq_c_bindings"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
raptorq = { path = "../internal/raptorq", features = ["std"] }

[dev-dependencies]
rand = "0.9"
criterion = "0.5"

[[bench]]
name = "interleaved_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true

[profile.bench]
opt-level = 3
lto = true
