[package]
name = "raptorq-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for RaptorQ (RFC 6330) forward error correction"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
raptorq = { path = "../internal/raptorq", default-features = false, features = ["std"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = 3
lto = true

# Enable WASM SIMD128
[target.wasm32-unknown-unknown]
rustflags = ["-C", "target-feature=+simd128"]
